--- a/assets/css/Pricing-Centered-icons.css
+++ b/assets/css/Pricing-Centered-icons.css
@@ -10,6 +10,12 @@
   color: var(--bs-primary);
 }
 
+.bs-icon-xs {
+  --bs-icon-size: 1rem;
+  width: calc(var(--bs-icon-size) * 1.5);
+  height: calc(var(--bs-icon-size) * 1.5);
+}
+
 .bs-icon-sm {
   --bs-icon-size: 1rem;
 }
@@ -18,9 +24,31 @@
   --bs-icon-size: 1.5rem;
 }
 
+.bs-icon-lg {
+  --bs-icon-size: 2rem;
+}
+
+.bs-icon-xl {
+  --bs-icon-size: 2.5rem;
+}
+
 .bs-icon.bs-icon-primary {
   color: var(--bs-white);
   background: var(--bs-primary);
+}
+
+.bs-icon.bs-icon-primary-light {
+  color: var(--bs-primary);
+  background: rgba(var(--bs-primary-rgb), .2);
+}
+
+.bs-icon.bs-icon-semi-white {
+  color: var(--bs-primary);
+  background: rgba(255, 255, 255, .5);
+}
+
+.bs-icon.bs-icon-rounded {
+  border-radius: .5rem;
 }
 
 .bs-icon.bs-icon-circle {
