--- a/assets/css/bs-theme-overrides.css
+++ b/assets/css/bs-theme-overrides.css
@@ -19,6 +19,8 @@
   --bs-light-text-emphasis: #626263;
   --bs-light-bg-subtle: #FDFDFE;
   --bs-light-border-subtle: #FBFBFC;
+  --bs-body-bg: #fefaef;
+  --bs-body-bg-rgb: 254,250,239;
   --bs-body-font-family: 'Chelsea Market', serif;
   --bs-link-color: #432113;
   --bs-link-color-rgb: 67,33,19;
